Add MatrixMultiplication benchmark
- Introduced the MatrixMultiplication benchmark to measure the performance of vectorized matrix operations.
- Utilized the Java Vector API to implement vectorized matrix multiplication.
- Added methods to compare the performance of scalar and vectorized matrix multiplication.
- Enhanced the project to provide insights into the performance gains from using the Vector API for matrix operations.

Signed-off-by: Ioannis Polyzos <git@ipolyzos.com>